# casetes

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
app/: __init__.py  main.py  music_service.py
scripts/: deploy.py  sync.py
static/css/: style.css
static/js/: audio.js  library.js
templates/: add.html  base.html  library.html
