[project]
name = "music-library"
version = "0.1.0"
description = "A personal music collection site powered by Deezer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uv]
dev-dependencies = []
